Weird error about Minified React error

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -577,6 +577,9 @@ video {
 .h-auto {
   height: auto;
 }
+.h-full {
+  height: 100%;
+}
 .min-h-\[120vh\] {
   min-height: 120vh;
 }
@@ -1016,64 +1019,78 @@ video {
     }
 }
 
+/**CSS code for the initiation form */
+.scenes {
+    aspect-ratio: 2.4 / 1;
+}
+
+.scene1, .scene2 {
+}
+
+.scene1 {
+   
+}
+
+.scene2 {
+    z-index: -1;
+    -webkit-mask-image: linear-gradient( to right, transparent 47.5%, #fff 52.5% );
+    -webkit-mask-size: 210%;
+    -webkit-mask-position: left;
+}
+
+.initiated {
+    z-index: 1;
+    -webkit-mask-position: right;
+    transition: -webkit-mask-position 2s linear;
+}
 
 .file\:rounded-lg::file-selector-button {
   border-radius: 0.5rem;
 }
-
 
 .file\:bg-\[\#99cbae\]::file-selector-button {
   --tw-bg-opacity: 1;
   background-color: rgb(153 203 174 / var(--tw-bg-opacity));
 }
 
-
 .file\:font-\[\'DecoTech\'\]::file-selector-button {
   font-family: 'DecoTech';
 }
-
 
 .file\:text-white::file-selector-button {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-
 .placeholder\:text-\[\#545454\]::-moz-placeholder {
   --tw-text-opacity: 1;
   color: rgb(84 84 84 / var(--tw-text-opacity));
 }
-
 
 .placeholder\:text-\[\#545454\]::placeholder {
   --tw-text-opacity: 1;
   color: rgb(84 84 84 / var(--tw-text-opacity));
 }
 
-
 .hover\:bg-\[\#d48518\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(212 133 24 / var(--tw-bg-opacity));
 }
-
 
 .hover\:bg-gray-800:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
-
 .active\:translate-x-\[5px\]:active {
   --tw-translate-x: 5px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-
 .active\:translate-y-\[5px\]:active {
   --tw-translate-y: 5px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-
 
 @media (min-width: 640px) {
 
@@ -1102,14 +1119,12 @@ video {
   }
 }
 
-
 @media (min-width: 768px) {
 
   .md\:w-5\/12 {
     width: 41.666667%;
   }
 }
-
 
 @media (min-width: 1024px) {
 
@@ -1118,115 +1133,93 @@ video {
   }
 }
 
-
 .\[\&\>\*\]\:mx-5>* {
   margin-left: 1.25rem;
   margin-right: 1.25rem;
 }
 
-
 .\[\&\>\*\]\:inline-block>* {
   display: inline-block;
 }
-
 
 .\[\&\>div\>input\]\:rounded-lg>div>input {
   border-radius: 0.5rem;
 }
 
-
 .\[\&\>div\>input\]\:border-\[1px\]>div>input {
   border-width: 1px;
 }
-
 
 .\[\&\>div\>input\]\:border-white>div>input {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-
 .\[\&\>div\>input\]\:bg-\[rgba\(0\2c 0\2c 0\2c 0\)\]>div>input {
   background-color: rgba(0,0,0,0);
 }
 
-
 .\[\&\>div\>input\]\:pl-3>div>input {
   padding-left: 0.75rem;
 }
-
 
 .\[\&\>div\>input\]\:text-black>div>input {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-
 .\[\&\>div\>input\]\:placeholder\:text-base>div>input::-moz-placeholder {
   font-size: 1rem;
   line-height: 1.5rem;
 }
-
 
 .\[\&\>div\>input\]\:placeholder\:text-base>div>input::placeholder {
   font-size: 1rem;
   line-height: 1.5rem;
 }
 
-
 .\[\&\>div\>input\]\:placeholder\:text-\[\#545454\]>div>input::-moz-placeholder {
   --tw-text-opacity: 1;
   color: rgb(84 84 84 / var(--tw-text-opacity));
 }
-
 
 .\[\&\>div\>input\]\:placeholder\:text-\[\#545454\]>div>input::placeholder {
   --tw-text-opacity: 1;
   color: rgb(84 84 84 / var(--tw-text-opacity));
 }
 
-
 .\[\&\>div\>label\]\:font-bold>div>label {
   font-weight: 700;
 }
 
-
 .\[\&\>div\>label\]\:uppercase>div>label {
   text-transform: uppercase;
 }
-
 
 .\[\&\>div\>label\]\:text-black>div>label {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-
 .\[\&\>div\]\:my-\[10px\]>div {
   margin-top: 10px;
   margin-bottom: 10px;
 }
 
-
 .\[\&\>div\]\:grid>div {
   display: grid;
 }
 
-
 .\[\&\>div\]\:w-full>div {
   width: 100%;
 }
-
 
 .\[\&\>p\]\:text-2xl>p {
   font-size: 1.5rem;
   line-height: 2rem;
 }
 
-
 .\[\&\>p\]\:text-white>p {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-
-
