--- a/views/login.ejs
+++ b/views/login.ejs
@@ -38,7 +38,7 @@
                   <img 
                     src = "<%= UpperFrame %>" 
                      alt = "upper-frame"
-                     class = "w-full h-auto" 
+                     class = "w-full h-auto select-none" 
                      />
                   <form
                     action="/login" 
@@ -87,7 +87,7 @@
                   <img 
                     src = "<%= BottomFrame %>" 
                     alt = "upper-frame"
-                    class = "w-full h-auto" 
+                    class = "w-full h-auto select-none" 
                      />
               </div>
             </div>
